2013-03-05  Xavi Artigas  <xartigas@fluendo.com>

	* lib/fludownloader.c:
	* lib/fludownloader.h:
	  - Return const gchar to make sure it is not free'd.

2013-03-05  Xavi Artigas  <xartigas@fluendo.com>

	* examples/multidl.c: (done_cb):
	* lib/fludownloader.c: (fludownloader_task_get_url):
	* lib/fludownloader.h:
	  - Add API to report the URL of a task. This is EXPERIMENTAL, as the lock
	    cannot be taken since we might want to call this from the data callback.

2013-03-05  Xavi Artigas  <xartigas@fluendo.com>

	* examples/multidl.c: (data_cb), (done_cb), (main):
	* lib/fludownloader.c: (_write_function), (_process_curl_messages),
	(fludownloader_new_task), (fludownloader_lock),
	(fludownloader_unlock):
	* lib/fludownloader.h:
	  - Add API to report the task that produced a data or done callback.
	  - Add API to lock/unlock the library and allow adding a task without taking
	    the library lock. This allows adding tasks in bucnhes.

2013-03-05  Xavi Artigas  <xartigas@fluendo.com>

	* fludownloader.pc.in:
	  - Add missing file.

2013-02-28  Xavi Artigas  <xartigas@fluendo.com>

	* lib/fludownloader.c: (fludownloader_init),
	(fludownloader_shutdown):
	  - Add init lock, to allow multithreaded initialization.

2013-02-27  Xavi Artigas  <xartigas@fluendo.com>

	* lib/fludownloader.c: (_remove_task), (_abort_task),
	(_schedule_tasks), (_thread_function), (fludownloader_new_task),
	(fludownloader_abort_task), (fludownloader_abort_all_tasks):
	  - Do not immediately pass all tasks to libCurl. Keep a list and pass them
	    one by one once the current transfer reaches 75% of the file (if known).
	    This allows having only one running task and at most one pipelined when
	    the current one is about to finish, which allows HTTP pipelining AND
	    reduces the risk of having to abort a transfer (which implies a new TCP
	    connection).

2013-02-26  Xavi Artigas  <xartigas@fluendo.com>

	* examples/multidl.c: (data_cb), (main):
	  - Update example.
